[package]
name = "actix-web-oidc-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-session = { version = "0.7", features = ["cookie-session"] }
openidconnect = { version = "3.2.0", default-features = false, features = ["reqwest", "native-tls"] }
serde = "1.0"

env_logger = "0.10"
log = "0.4"
rand = "0.8"
serde_json = "1.0.97"
